@@ -1,58 +1,29 @@
 The tré programming language
 ============================
 
-# Overview
+tré compiles Lisp to browser JavaScript and PHP to bring the joy
+of Lisp development to web-site programming.  tré also somes with
+a bunch of syntacical novelties that lets Lisp appear in a new
+light.
 
-tré compiles its own dialect of the Lisp programming language to
-JavaScript or PHP.
-
-
-## External resources
-
-### Applications
-
-### [phitamine demo shop](https://github.com/SvenMichaelKlose/phitamine-shop)
-
-### Examples
-
-### [phitamine](https://github.com/SvenMichaelKlose/phitamine)
-
-A framework to create PHP-only web sites with tré.
-[centralservices](https://github.com/SvenMichaelKlose/centralservices)
-provides a couple of widgets.
-
-### [bender](https://github.com/SvenMichaelKlose/bender)
-
-A UNIX command line 6502-CPU assembler.
-
-### Modules
-
-[JavaScript DOM and utilities](https://github.com/SvenMichaelKlose/tre-js)
-
-[Localisation](https://github.com/SvenMichaelKlose/tre-l10n)
-
-[PHP utilities](https://github.com/SvenMichaelKlose/tre-php)
-
-[PHP MySQL interface](https://github.com/SvenMichaelKlose/tre-php-db-mysql)
-
-[Utilities shared across platforms](https://github.com/SvenMichaelKlose/tre-shared)
-
-[SQL clause generators](https://github.com/SvenMichaelKlose/tre-sql-clause)
-
-[Lisp Markup Language utilities](https://github.com/SvenMichaelKlose/tre-lml)
-
-[Multitrack timetable + JS DOM graphics](https://github.com/SvenMichaelKlose/tre-timetable)
-
-## Examples
-
-### [JavaScript 3D canvas](https://github.com/SvenMichaelKlose/tre-example-js-canvas3d)
-
-Software-rendered 3D, playing a video on a rotating plane.
+tré is not just remapping its input. It's a "real" compiler, fit
+to support compiling to C, for example, so it also brings Lisp
+features to PHP 5+ – you can use code for both targets.
 
 
-# Building and installing
+# Build and install
 
-Make sure you have sbcl (Steel Bank Common Lisp) installed.
+tré requires some Linux with "sbcl" (Steel Bank Common Lisp)
+installed.  But to get real kicks out of tré, you'd need "git"
+and "docker-compose", too. On an Debia-derived distributions,
+like "Ubuntu" or "Linux Mint"
+
+```sh
+sudo apt install git sbcl docker-compose -y
+```
+
+should do.  You won't need to have a web server installed.
+
 Then run:
 
 ```sh
@@ -60,10 +31,77 @@ Then run:
 ./make.sh install
 ```
 
-The installed binary is named "tre" in /usr/local/bin.  It
-takes an optional pathname of a source file to compile and
+This will install an executable called "tre" in /usr/local/bin.
+It takes an optional pathname of a source file to compile and
 execute.  If none is specified, it'll prompt you for
-expressions to execute.
+expressions to execute.  We won't to that too often, though.
+Now let's get started.
+
+
+# Starting a project
+
+Let's get ready to hack.  There're three initial projects
+prepared for you in directory example/ which you can copy to
+take off.  All contain configurations for docker-compose to run
+your project in a virtual LAMP server.  "project-js" for making a
+plain JavaScript app,  "project-php" to create a PHP-only
+challenge and "project-js-php" to make an app that'll communicate
+with it's PHP server – by function calls wrapped in HTTP requests.
+
+## Creating a JavaScript-only project
+
+Can't wait? Copy examples/project-js to a directory of your own
+naming and step into it:
+
+```sh
+cp examples/project-js <someplace-new>
+cd <someplace-new>
+```sh
+
+Then install the required modules – well, they're not exactly
+required but they're rather practical when hacking around.
+
+Now compile the example code:
+
+```sh
+./make.sh
+```
+
+Step into directory compiled and start the docker container:
+
+```sh
+cd compiled
+sudo docker-compose up
+```
+
+This may take a while and download several hundred megabytes to
+setup its very own Linux distribution the first time you do this.
+Now point your browser at http://localhost:19020/ – voilà!
+
+## Creating a PHP-only project
+
+This works the same as creating a JavaScript-only project, except
+that you have to copy examples/project-php.  But this time the
+docker container also has a MySQL database installed.  Within the
+container it's listening on hostname "db" from the outside you can
+read it at IP 0.0.0.0.  It's got two users, "root" and "tre", both
+with password "secret".  You can change these in file
+"docker-compose.yml" before doing your first web server launch.
+You can also remove the whole database section from that file, if
+you won't need it.  A database configuration has already been
+prepared for use with module "php-db-mysql".
+
+If you want to see a full-blown PHP-only example in action, please
+visit https://github.com/SvenMichaelKlose/phitamine-shop.
+
+## Creating a JavaScript project with PHP server
+
+Again, this works like "project-js".  This time the server
+implements function SERVER-APPLY which takes a function name(!) and
+its arguments – the JavaScript client basically asks the PHP server
+to add 1 and 2 with function "+" and returns the result by just
+calling SERVER-APPLY as if it was a JavaScript function.
+This example also contains the MySQL database code.
 
 
 # Syntax
@@ -240,3 +278,45 @@ Use %%NATIVE to inject native source strings:
 ```lisp
 (some_php_function (%%native "LITERAL_CONSTANT_NAME_WITHOUT_DOLLAR"))
 ```
+
+## External resources
+
+### Applications
+
+### [phitamine demo shop](https://github.com/SvenMichaelKlose/phitamine-shop)
+
+### Examples
+
+### [phitamine](https://github.com/SvenMichaelKlose/phitamine)
+
+A framework to create PHP-only web sites with tré.
+[centralservices](https://github.com/SvenMichaelKlose/centralservices)
+provides a couple of widgets.
+
+### [bender](https://github.com/SvenMichaelKlose/bender)
+
+A UNIX command line 6502-CPU assembler.
+
+### Modules
+
+[JavaScript DOM and utilities](https://github.com/SvenMichaelKlose/tre-js)
+
+[Localisation](https://github.com/SvenMichaelKlose/tre-l10n)
+
+[PHP utilities](https://github.com/SvenMichaelKlose/tre-php)
+
+[PHP MySQL interface](https://github.com/SvenMichaelKlose/tre-php-db-mysql)
+
+[Utilities shared across platforms](https://github.com/SvenMichaelKlose/tre-shared)
+
+[SQL clause generators](https://github.com/SvenMichaelKlose/tre-sql-clause)
+
+[Lisp Markup Language utilities](https://github.com/SvenMichaelKlose/tre-lml)
+
+[Multitrack timetable + JS DOM graphics](https://github.com/SvenMichaelKlose/tre-timetable)
+
+## Examples
+
+### [JavaScript 3D canvas](https://github.com/SvenMichaelKlose/tre-example-js-canvas3d)
+
+Software-rendered 3D, playing a video on a rotating plane.
