@@ -1,0 +1,6 @@
+[xdebug]
+xdebug.max_nesting_level = 256
+xdebug.idekey = PHPSTORM
+xdebug.remote_enable=1
+xdebug.remote_autostart=0
+xdebug.remote_connect_back=1
