@@ -1,0 +1,1 @@
+(declare-server-command server-apply (fun-name &rest args))
