@@ -1,0 +1,7 @@
+<?php
+# For docker container.
+$DBNAME = 'tre_project';
+$DBHOST = 'db';
+$DBUSER = 'tre';
+$DBPASSWORD = 'secret';
+?>
