@@ -1,0 +1,7 @@
+(%%native "" "require_once 'db-config.php';")
+
+(princ (lml2xml `(html
+                   (head
+                     (title "tré PHP project"))
+                   (body
+                     "Hello world!"))))
